--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.2",
+    "vue-cookie": "^1.1.4",
     "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
     "weui": "^1.1.3"
   },
   "devDependencies": {
