--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "store": "^2.0.12",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
     "vue-resource": "^1.5.1",
