--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "framework7": "^3.5.2",
+    "framework7-vue": "^3.5.2",
     "store": "^2.0.12",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "weui": "^1.1.3"
+    "weui": "^1.1.3",
+    "weui.js": "^1.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
