--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-cookie": "^1.1.4",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
+    "vue-swipe": "^2.4.0",
     "vuex": "^3.0.1",
     "weui": "^1.1.3",
     "weui.js": "^1.1.4"
