--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^0.18.0",
     "framework7": "^3.5.2",
     "framework7-vue": "^3.5.2",
+    "jquery": "^3.3.1",
+    "jquery-weui": "^1.2.1",
     "store": "^2.0.12",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
