--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "store": "^2.0.12",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-swipe": "^2.4.0",
