--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-infinite-scroll": "^2.0.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
+    "vue-scroller": "^2.2.4",
     "vue-swipe": "^2.4.0",
     "vuex": "^3.0.1",
     "weui": "^1.1.3",
